# avfs

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac
bzlib/: Makefile.in  bzlib.c  bzlib.h  bzlib_private.h  compress.c
debian/: README.Debian  avfs.lintian-overrides  changelog  control  copyright  docs  rules  watch
debian/patches/: configure  extfs  series  udar  umountavfs
doc/: INSTALL.library  Makefile.am  Makefile.in  README.avfs-fuse
extfs/: Makefile.in  udar  ulha.in
fuse/: Makefile.in
include/: Makefile.am  Makefile.in  internal.h  lzipfile.h  zfile.h  zstdfile.h
lib/: Makefile.in
macros/: Makefile.in
modules/: Makefile.am  Makefile.in  dav.c  dav.h  dav_ls.c  rsh.c  ucftp.c  ugz.c  ulzip.c  urar.c  uxze.c  uzip.c  uzstd.c  uzstde.c
patch/: Makefile.am  Makefile.in
pkgconfig/: Makefile.am  Makefile.in  avfs.pc.in
scripts/: Makefile.am  Makefile.in
spec/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  bzread.c  default.c  filecache.c  lzipread.c  make_info  parse.c  parsels.c  serialfile.c  xzread.c  zread.c  zstdread.c
test/: Makefile.am  Makefile.in  gzip_multimember_test.c  testread.c
zlib/: Makefile.in
